cmake_minimum_required(VERSION 3.22)
project(boj_algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(boj_algorithm
        src/boj_10026.cpp
        src/boj_10039.c
        src/boj_1012.cpp
        src/boj_10170.c
        src/boj_10172.c
        src/boj_1018.c
        src/boj_1032.c
        src/boj_1037.c
        src/boj_1049.c
        src/boj_1074.c
        src/boj_10773.c
        src/boj_10809.c
        src/boj_10817.c
        src/boj_10818.c
        src/boj_10828.c
        src/boj_10845.c
        src/boj_1085.c
        src/boj_10866.c
        src/boj_10870.c
        src/boj_10871.c
        src/boj_10872.c
        src/boj_1094.c
        src/boj_10950.c
        src/boj_10951.c
        src/boj_10952.c
        src/boj_11021.c
        src/boj_11022.c
        src/boj_11047.cpp
        src/boj_11050.c
        src/boj_1107.c
        src/boj_1110.c
        src/boj_11653.c
        src/boj_11654.c
        src/boj_11720.c
        src/boj_11721.c
        src/boj_11723.c
        src/boj_1236.c
        src/boj_1259.c
        src/boj_1316.c
        src/boj_1453.c
        src/boj_14645.c
        src/boj_15240.c
        src/boj_15552.c
        src/boj_15596.c
        "src/boj_15829(2).c"
        src/boj_15829.c
        src/boj_1620.cpp
        src/boj_1712.c
        src/boj_17219.cpp
        src/boj_1764.cpp
        src/boj_1924.c
        src/boj_1929.c
        src/boj_1934.c
        src/boj_1966.cpp
        src/boj_1966_refactoring.cpp
        src/boj_1978.c
        src/boj_2156.c
        src/boj_2163.c
        src/boj_2164.c
        src/boj_2167.c
        src/boj_2212.cpp
        src/boj_2231.c
        src/boj_2292.c
        src/boj_2420.c
        src/boj_2440.c
        src/boj_2441.c
        src/boj_2468.cpp
        src/boj_2480.c
        src/boj_2525.c
        src/boj_25311.c
        src/boj_2558.c
        src/boj_2562.c
        src/boj_2577.c
        src/boj_2581.c
        src/boj_2606.cpp
        src/boj_2609.c
        src/boj_2675.c
        src/boj_2739.c
        src/boj_2741.c
        src/boj_2742.c
        src/boj_2743.c
        src/boj_2744.c
        src/boj_2748.c
        src/boj_2775.c
        src/boj_2839.c
        src/boj_2869.c
        src/boj_2908.c
        src/boj_2920.c
        src/boj_2941.c
        src/boj_3003.c
        src/boj_3052.c
        src/boj_3190.cpp
        src/boj_3190_refactoring.cpp
        src/boj_4101.c
        src/boj_4153.c
        src/boj_4344.c
        src/boj_4948.c
        src/boj_4949.c
        src/boj_5339.c
        src/boj_5430.cpp
        src/boj_5522.c
        src/boj_5597.c
        src/boj_5622.c
        src/boj_7287.c
        src/boj_7568.c
        src/boj_7576.c
        src/boj_8393.c
        src/boj_8958.c
        src/boj_9012.c
        src/boj_9020.c
        src/boj_9095.c
        src/boj_9461.c
        src/boj_9653.c
        src/boj_9654.c
        src/boj_9663.c)
